syntax = "proto3";

package users;

service UserService {
    rpc CreateUser (CreateUserDto) returns (User){}
    rpc FindAllUsers (Empty) returns (Users){}
    rpc FindOneUser (FindOneUserDto) returns (User){}
    rpc UpdateUser (UpdateUserDto) returns (User){}
    rpc RemoveUser (FindOneUserDto) returns (User){}
    rpc QueryUsers (stream PaginationDto) returns (stream Users){}
}

message Empty {}

message PaginationDto {
    int32 page = 1;
    int32 skip = 2;
}

message UpdateUserDto{
    string id = 1;
    SocialMedia socialMedia = 2;
}

message FindOneUserDto {
    string id = 1;
}

message CreateUserDto {
    string name = 1;
    string email = 2;
    string photo = 3;
    string provider = 4;
}

message Users {
    repeated User users = 1;
}

message User {
    string id = 1;
    string name = 2;
    string email = 3;
    string photo = 4;
    string provider = 5;
    string subscribed = 6;
    SocialMedia socialMedia = 7;
}

message SocialMedia{
    optional string twitter = 1;
    optional string instagram = 2;
}